--- a/frontend/src/app/view-products/view-products.component.html
+++ b/frontend/src/app/view-products/view-products.component.html
@@ -1,1 +1,14 @@
-<p>view-products works!</p>
+<table class="table">
+    <thead>
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Price</th>
+          <th scope="col">Stock</th>
+        </tr>
+      </thead>
+    <tr *ngFor="let x of products">
+      <td>{{ x.name }}</td>
+      <td>${{ x.price / 100 }}</td>
+      <td>{{ x.stock }} units</td>
+    </tr>
+  </table>
