--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,17 @@
+<nav class="navbar navbar-expand-lg fixed-top navbar-scroll shadow-0" style="background-color: #ffffff;">
+    <div class="container">
+      <a class="navbar-brand">Product Demo</a>
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link px-3" href = "#" onclick="return false" (click) = "viewProducts()">View Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link px-3" href = "#" onclick="return false" (click) = "createProduct()">Create Product</a>
+          </li>
+        </ul>
+      </div>
+  </nav>
+
+
 
 <router-outlet></router-outlet>
