--- a/frontend/src/app/view-products/view-products.component.html
+++ b/frontend/src/app/view-products/view-products.component.html
@@ -1,14 +1,23 @@
-<table class="table">
-    <thead>
-        <tr>
-          <th scope="col">Name</th>
-          <th scope="col">Price</th>
-          <th scope="col">Stock</th>
-        </tr>
-      </thead>
-    <tr *ngFor="let x of products">
-      <td>{{ x.name }}</td>
-      <td>${{ x.price / 100 }}</td>
-      <td>{{ x.stock }} units</td>
-    </tr>
-  </table>
+
+<div class="body">
+    <div class="table-body">
+        <div class="table-title"> Product List</div>
+
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Price</th>
+                <th scope="col">Stock</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let x of products">
+                <td>{{ x.name }}</td>
+                <td>${{ x.price / 100 }}</td>
+                <td>{{ x.stock }} units</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
